fix: Исправлен gap в заголовке trust

--- a/src/pages/home/ui/home.module.scss
+++ b/src/pages/home/ui/home.module.scss
@@ -120,6 +120,10 @@
     display: flex;
     flex-direction: column;
     gap: 1.6rem;
+
+    @include md-d {
+      gap: 1.2rem;
+    }
   }
 
   & .trustButton {
